fix: adjust body font size for better readability

--- a/design/demo/index.css
+++ b/design/demo/index.css
@@ -123,7 +123,7 @@ body {
     display: block;
     text-decoration: none;
     text-align: center;
-    font-size: 20px;
+    font-size: 16px;
     font-weight: 500;
     line-height: 42px;
     outline: none;
